[project]
name = "fastapi-request-lock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
    "uvicorn>=0.34.3",
]

# Pytest設定
[tool.pytest.ini_options]
asyncio_mode = "auto"
